# chat

./: Cargo.toml
src/: jwt.rs  main.rs  models.rs  test.rs  web_socket.rs
src/database/: _database.rs  add_user_to_room.rs  connect.rs  create_new_room.rs  fetch_available_rooms.rs  fetch_messages_by_room.rs  get_user_by_username.rs  insert_new_user.rs  mod.rs  send_message.rs  verify_password.rs
src/migrations/: db.sql  message.sql
src/routes/: _routes.rs  create_room.rs  get_rooms.rs  get_user.rs  login.rs  mod.rs  register_user.rs  room.rs
src/utils/: _utils.rs  mod.rs  validate_token.rs
