[package]
name = "chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-cors = "0.6.4"
actix-web = "4.3.0"
actix-web-actors ="4.2.0"
dotenv = "0.15.0"
serde = { version = "1.0.152", features = ["derive"] }
rust-argon2 = "1.0.0"
jsonwebtoken = "8.2.0"
uuid = { version = "1.3.0", features = ["v4", "serde"] }
actix-ws = '0.2.5'
futures-util = '0.3.26'
tokio = { version = '1.25.0', features = ["rt", "time", "macros"] }
log = '0.4.17'
rand ='0.8.5'

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "tls",
    "chrono",
    "json",
    "decimal",
    "bigdecimal",
    "uuid",
    "time",
]
